# Tested with JM 18.6
set( JM_NAME_HEADERS      
	${JM_DIR}/ldecod/inc/header.h
	${JM_DIR}/ldecod/inc/annexb.h
	${JM_DIR}/ldecod/inc/biaridecod.h
	${JM_DIR}/ldecod/inc/block.h
	${JM_DIR}/ldecod/inc/cabac.h
	${JM_DIR}/ldecod/inc/configfile.h
	${JM_DIR}/ldecod/inc/context_ini.h
	${JM_DIR}/ldecod/inc/contributors.h
	${JM_DIR}/ldecod/inc/dec_statistics.h
	${JM_DIR}/ldecod/inc/defines.h
	${JM_DIR}/ldecod/inc/elements.h
	${JM_DIR}/ldecod/inc/erc_api.h
	${JM_DIR}/ldecod/inc/erc_do.h
	${JM_DIR}/ldecod/inc/erc_globals.h
	${JM_DIR}/ldecod/inc/errorconcealment.h
	${JM_DIR}/ldecod/inc/filehandle.h
	${JM_DIR}/ldecod/inc/fmo.h
	${JM_DIR}/ldecod/inc/global.h
	${JM_DIR}/ldecod/inc/h264decoder.h
	${JM_DIR}/ldecod/inc/header.h
	${JM_DIR}/ldecod/inc/image.h
	${JM_DIR}/ldecod/inc/intra16x16_pred.h
	${JM_DIR}/ldecod/inc/intra4x4_pred.h
	${JM_DIR}/ldecod/inc/intra8x8_pred.h
	${JM_DIR}/ldecod/inc/leaky_bucket.h
	${JM_DIR}/ldecod/inc/loopfilter.h
	${JM_DIR}/ldecod/inc/loop_filter.h
	${JM_DIR}/ldecod/inc/macroblock.h
	${JM_DIR}/ldecod/inc/mbuffer.h
	${JM_DIR}/ldecod/inc/mbuffer_mvc.h
	${JM_DIR}/ldecod/inc/mb_prediction.h
	${JM_DIR}/ldecod/inc/mc_prediction.h
	${JM_DIR}/ldecod/inc/nalu.h
	${JM_DIR}/ldecod/inc/output.h
	${JM_DIR}/ldecod/inc/parset.h
	${JM_DIR}/ldecod/inc/quant.h
	${JM_DIR}/ldecod/inc/rtp.h
	${JM_DIR}/ldecod/inc/sei.h
	${JM_DIR}/ldecod/inc/transform8x8.h
	${JM_DIR}/ldecod/inc/vlc.h
	${JM_DIR}/lcommon/inc/blk_prediction.h
	${JM_DIR}/lcommon/inc/config_common.h
	${JM_DIR}/lcommon/inc/ctx_tables.h
	${JM_DIR}/lcommon/inc/distortion.h
	${JM_DIR}/lcommon/inc/enc_statistics.h
	${JM_DIR}/lcommon/inc/fast_memory.h
	${JM_DIR}/lcommon/inc/frame.h
	${JM_DIR}/lcommon/inc/ifunctions.h
	${JM_DIR}/lcommon/inc/img_io.h
	${JM_DIR}/lcommon/inc/img_process.h
	${JM_DIR}/lcommon/inc/img_process_types.h
	${JM_DIR}/lcommon/inc/input.h
	${JM_DIR}/lcommon/inc/io_image.h
	${JM_DIR}/lcommon/inc/io_raw.h
	${JM_DIR}/lcommon/inc/io_tiff.h
	${JM_DIR}/lcommon/inc/io_video.h
	${JM_DIR}/lcommon/inc/lagrangian.h
	${JM_DIR}/lcommon/inc/mbuffer_common.h
	${JM_DIR}/lcommon/inc/mb_access.h
	${JM_DIR}/lcommon/inc/memalloc.h
	${JM_DIR}/lcommon/inc/mv_prediction.h
	${JM_DIR}/lcommon/inc/nalucommon.h
	${JM_DIR}/lcommon/inc/parsetcommon.h
	${JM_DIR}/lcommon/inc/quant_params.h
	${JM_DIR}/lcommon/inc/report.h
	${JM_DIR}/lcommon/inc/transform.h
	${JM_DIR}/lcommon/inc/typedefs.h
	${JM_DIR}/lcommon/inc/types.h
	${JM_DIR}/lcommon/inc/vui_params.h
	${JM_DIR}/lcommon/inc/win32.h
)

set( JM_NAME_SRC
	
	${JM_DIR}/ldecod/src/annexb.c
	${JM_DIR}/ldecod/src/biaridecod.c
	${JM_DIR}/ldecod/src/block.c
	${JM_DIR}/ldecod/src/cabac.c
	${JM_DIR}/ldecod/src/configfile.c
	${JM_DIR}/ldecod/src/context_ini.c
	${JM_DIR}/ldecod/src/dec_statistics.c
	${JM_DIR}/ldecod/src/erc_api.c
	${JM_DIR}/ldecod/src/erc_do_i.c
	${JM_DIR}/ldecod/src/erc_do_p.c
	${JM_DIR}/ldecod/src/errorconcealment.c
	${JM_DIR}/ldecod/src/filehandle.c
	${JM_DIR}/ldecod/src/fmo.c
	${JM_DIR}/ldecod/src/header.c
	${JM_DIR}/ldecod/src/image.c
	${JM_DIR}/ldecod/src/intra16x16_pred.c
	${JM_DIR}/ldecod/src/intra16x16_pred_mbaff.c
	${JM_DIR}/ldecod/src/intra16x16_pred_normal.c
	${JM_DIR}/ldecod/src/intra4x4_pred.c
	${JM_DIR}/ldecod/src/intra4x4_pred_mbaff.c
	${JM_DIR}/ldecod/src/intra4x4_pred_normal.c
	${JM_DIR}/ldecod/src/intra8x8_pred.c
	${JM_DIR}/ldecod/src/intra8x8_pred_mbaff.c
	${JM_DIR}/ldecod/src/intra8x8_pred_normal.c
	${JM_DIR}/ldecod/src/intra_chroma_pred.c
	${JM_DIR}/ldecod/src/intra_chroma_pred_mbaff.c
	${JM_DIR}/ldecod/src/intra_pred_common.c
	${JM_DIR}/ldecod/src/ldecod.c
	${JM_DIR}/ldecod/src/leaky_bucket.c
	${JM_DIR}/ldecod/src/loopFilter.c
	${JM_DIR}/ldecod/src/loop_filter_mbaff.c
	${JM_DIR}/ldecod/src/loop_filter_normal.c
	${JM_DIR}/ldecod/src/macroblock.c
	${JM_DIR}/ldecod/src/mbuffer.c
	${JM_DIR}/ldecod/src/mbuffer_mvc.c
	${JM_DIR}/ldecod/src/mb_access.c
	${JM_DIR}/ldecod/src/mb_prediction.c
	${JM_DIR}/ldecod/src/mb_read.c
	${JM_DIR}/ldecod/src/mc_direct.c
	${JM_DIR}/ldecod/src/mc_prediction.c
	${JM_DIR}/ldecod/src/nal.c
	${JM_DIR}/ldecod/src/nalu.c
	${JM_DIR}/ldecod/src/output.c
	${JM_DIR}/ldecod/src/parset.c
	${JM_DIR}/ldecod/src/quant.c
	${JM_DIR}/ldecod/src/read_comp_cabac.c
	${JM_DIR}/ldecod/src/read_comp_cavlc.c
	${JM_DIR}/ldecod/src/rtp.c
	${JM_DIR}/ldecod/src/sei.c
	${JM_DIR}/ldecod/src/transform8x8.c
	${JM_DIR}/ldecod/src/vlc.c
	${JM_DIR}/lcommon/src/blk_prediction.c
	${JM_DIR}/lcommon/src/config_common.c
	${JM_DIR}/lcommon/src/img_io.c
	${JM_DIR}/lcommon/src/img_process.c
	${JM_DIR}/lcommon/src/input.c
	${JM_DIR}/lcommon/src/io_raw.c
	${JM_DIR}/lcommon/src/io_tiff.c
	${JM_DIR}/lcommon/src/mbuffer_common.c
	${JM_DIR}/lcommon/src/memalloc.c
	${JM_DIR}/lcommon/src/mv_prediction.c
	${JM_DIR}/lcommon/src/nalucommon.c
	${JM_DIR}/lcommon/src/parsetcommon.c
	${JM_DIR}/lcommon/src/transform.c
	${JM_DIR}/lcommon/src/win32.c
)

add_library(JM STATIC ${JM_NAME_SRC} ${JM_NAME_HEADERS})